cluster-go/lightspeed-benchmark/test-01/templates/pacman-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
  name: pacman
  namespace: ols-test-01
  labels:
    app: pacman
    app.kubernetes.io/component: pacman
    app.kubernetes.io/instance: pacman
    app.kubernetes.io/name: pacman
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: ols-test-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
        deployment: pacman
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: pacman
          image: 'quay.io/rh_ee_cschmitz/pacmad:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
