cluster-go/lightspeed-benchmark/test-01/templates/pacman-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: pacman
  namespace: ols-test-01
spec:
  selector:
    app: pacman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
