cluster-go/lightspeed-benchmark/test-01/templates/pacman-route.yaml
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman
  namespace: ols-test-01
  labels: {}
spec:
  to:
    kind: Service
    name: pacman
  tls: {}
  port:
    targetPort: 8080
